pkg/chisel/testdata/valid/21_for_loop.chisel
for i in 0..3 { sphere.at(i, 0, 0) }
