pkg/chisel/testdata/errors/08_missing_for_body.chisel
for i in 0..3 sphere
